--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			type="text/css"
 		/>
 		<link type="text/css" rel="stylesheet" href="style.css" />
-		<title>Budgety project</title>
+		<title>Budgety</title>
 	</head>
 	<body>
 		<div class="top">
